--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dom-parser": "^0.1.7",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.0",
