--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-dom-parser": "^0.1.7",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.0",
